tests/expectations/compiler/core/algorithms/integers/pedersen64/pedersen64_hash_to_i8.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:26:21
     |
  26 |         let a: i8 = Pedersen64::hash_to_i8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:27:21
     |
  27 |         let b: i8 = Pedersen64::hash_to_i8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:21
     |
  28 |         let c: i8 = Pedersen64::hash_to_i8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:21
     |
  29 |         let d: i8 = Pedersen64::hash_to_i8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:21
     |
  30 |         let e: i8 = Pedersen64::hash_to_i8(i8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:21
     |
  31 |         let f: i8 = Pedersen64::hash_to_i8(i16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:21
     |
  32 |         let g: i8 = Pedersen64::hash_to_i8(i32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:21
     |
  33 |         let j: i8 = Pedersen64::hash_to_i8(u8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:21
     |
  34 |         let k: i8 = Pedersen64::hash_to_i8(u16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:21
     |
  35 |         let l: i8 = Pedersen64::hash_to_i8(u32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:21
     |
  36 |         let o: i8 = Pedersen64::hash_to_i8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:21
     |
  38 |         let q: i8 = Pedersen64::hash_to_i8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
